--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "babel-preset-react": "^6.24.1",
     "flatpickr": "^4.5.2",
     "leaflet": "^1.3.4",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^0.48.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-star-rating-component": "^1.4.1",
+    "react_ujs": "^2.4.4",
+    "sweetalert": "^2.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
